# Co_Dev_Projects

./: README.md
Libraries/macOS/: SDL2-2.30.2.dmg  SDL2_image-2.8.2.dmg  SDL2_ttf-2.22.0.dmg
SnakeGame/: CMakeLists.txt  Makefile  build.sh  main.cpp
SnakeGame/images/: grass.avif
dbus-based/: CMakeLists.txt  Makefile  README.md  main.cpp
dbus-based/demo-source/: server-client.cpp  source
dbus-based/ex-dbus-1.0/: CMakeLists.txt  research-dbus.cpp
dbus-based/idl/: CMakeLists.txt  dbus.res.c  dbus.res.h  dbus.res.xml
dbus-based/migrate_dbus/: client.cpp  server.cpp
dbus-based/migrate_dbus/files/: generated-code.c  generated-code.h
